# amplifier-app-voice

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
ai_working/archive/ddd-20251104/: code_plan.md  docs_status.md  plan.md  validation_summary.md
ai_working/ddd/: docs_index.txt
docs/: ARCHITECTURE.md  AUDIO_SETUP.md  CONFIGURATION.md  KEYBOARD_CONTROLS.md  MODULE_COMPOSITION.md
examples/: config.yaml  simple_conversation.sh
profiles/: voice.md
src/amplifier_app_voice/: __init__.py  config.py  main.py  session_manager.py
src/amplifier_app_voice/audio/: __init__.py  capture.py  playback.py  utils.py
src/amplifier_app_voice/ui/: __init__.py  keyboard.py  terminal.py
