[project]
name = "amplifier-app-voice"
version = "0.1.0"
description = "Voice assistant application powered by Amplifier and OpenAI Realtime API"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Microsoft MADE:Explorations Team" }]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyaudio>=0.2.14",
    "numpy>=1.24.0",
    "readchar>=4.0.0",
    "pyyaml>=6.0",
    "amplifier-core",
    "amplifier-profiles",
    "amplifier-module-resolution",
]

[project.scripts]
amplifier-voice = "amplifier_app_voice.main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_voice"]

[tool.hatch.build.targets.wheel.shared-data]
"profiles" = "share/amplifier_app_voice/profiles"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "amplifier-module-loop-basic",
    "amplifier-module-context-simple",
    "amplifier-module-provider-openai-realtime",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-profiles = { git = "https://github.com/microsoft/amplifier-profiles", branch = "main" }
amplifier-module-resolution = { git = "https://github.com/microsoft/amplifier-module-resolution", branch = "main" }
amplifier-module-loop-basic = { path = "../amplifier-module-loop-basic", editable = true }
amplifier-module-context-simple = { path = "../amplifier-module-context-simple", editable = true }
amplifier-module-provider-openai-realtime = { path = "../amplifier-module-provider-openai-realtime", editable = true }

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires real audio devices and API key)"
]
